test/pass/lambdas/lambda_multiexpr_with_expect.lily
var last = 0
var v: Function(Integer => Integer) = (|a|
        last = a
        a + 1
        )

if v(10) != 11 || last != 10:
    stderr.print("Failed.")
