test/fail/exceptions/trigger_keyerror.lily
#[
KeyError: "b"
Traceback:
    from trigger_keyerror.lily:9: in __main__
]#

var v = ["a" => 1]

print(v["b"])
